フォーム画面作成

--- a/user/templates/user/new.html
+++ b/user/templates/user/new.html
@@ -8,7 +8,13 @@
 
 <body>
     <h1>ユーザーフォーム</h1>
-    <p>{{ message }}</p>
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">送信</button>
+    </form>
+    <p>{{ name }}</p>
+    <p>{{ email }}</p>
 </body>
 
 </html>
