--- a/user/templates/user/new.html
+++ b/user/templates/user/new.html
@@ -7,14 +7,13 @@
 </head>
 
 <body>
-    <h1>ユーザーフォーム</h1>
-    <form method="POST">
+    <h1>メンバー登録フォーム</h1>
+    <form method="POST" novalidate>
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">送信</button>
     </form>
-    <p>{{ name }}</p>
-    <p>{{ email }}</p>
+    <p>{{ message }}</p>
 </body>
 
 </html>
